Add route for fetching cv document
